MyEccom-K8-Files/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
  creationTimestamp: "2022-04-11T17:49:40Z"
  generation: 3
  labels:
    app: backend
  name: backend
  namespace: default
  resourceVersion: "105346"
  uid: 14caa88a-bbb3-4f98-912b-51f3a542d9af
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: env-backend
        image: stephmen/docker-ecom-backendk8:tag7
        imagePullPolicy: IfNotPresent
        name: docker-ecom-backend
        command:
        - /bin/sh
        - -c
        - prisma deploy
        # - sleep 3600
        # - npm run start
        ports:
        - containerPort: 4444
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2022-04-11T20:31:26Z"
    lastUpdateTime: "2022-04-11T20:31:26Z"
    message: ReplicaSet "backend-7d9866ffdf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-04-11T20:31:27Z"
    lastUpdateTime: "2022-04-11T20:31:27Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 3
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
