MyEccom-K8-Files/example-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/$1"},"creationTimestamp":"2022-04-08T19:25:31Z","generation":2,"name":"example-ingress","namespace":"default","resourceVersion":"1662","uid":"592b255c-303e-47b7-b64e-de1a5df63fee"},"spec":{"ingressClassName":"nginx","rules":[{"host":"hello-world.myeccom.com","http":{"paths":[{"backend":{"service":{"name":"web","port":{"number":8080}}},"path":"/","pathType":"Prefix [...]
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  creationTimestamp: "2022-04-08T19:25:31Z"
  generation: 3
  name: example-ingress
  namespace: default
  resourceVersion: "5295"
  uid: 592b255c-303e-47b7-b64e-de1a5df63fee
spec:
  ingressClassName: nginx
  rules:
  - host: hello-world.myeccom.com
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: web2
            port:
              number: 8080
        path: /v2
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
