MyEccom-K8-Files/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2022-04-11T02:03:28Z"
  generation: 2
  name: frontend
  namespace: default
  resourceVersion: "187731"
  uid: baacf53d-ad1b-4f1d-9ac9-34469b194323
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.myeccom.com
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 7777
        path: /*
        pathType: Exact
  - host: backend.myeccom.com
    http:
      paths:
      - backend:
          service:
            name: backend
            port:
              number: 4444
        path: /graphql
        pathType: Exact
  - host: prisma.myeccom.com
    http:
      paths:
      - backend:
          service:
            name: prisma
            port:
              number: 4466
        path: /*
        pathType: Exact
status:
  loadBalancer:
    ingress:
    - hostname: localhost
