MyEccom-K8-Files/service-backend-myeccom.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-04-20T13:47:14Z"
  labels:
    app: backend
  name: back-myeccom
  namespace: default
  resourceVersion: "432271"
  uid: 154577e3-7662-4ef8-bb8b-89fcdd3a1bdd
spec:
  clusterIP: 10.101.136.13
  clusterIPs:
  - 10.101.136.13
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 4444
    port: 4444
    protocol: TCP
    targetPort: 4444
  selector:
    app: backend
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
