MyEccom-K8-Files/service-front-myeccom.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-04-14T13:57:14Z"
  labels:
    app: frontend
  name: front-myeccom
  namespace: default
  resourceVersion: "204870"
  uid: 662dd468-aaee-4201-9246-11ebfd5568e6
spec:
  clusterIP: 10.101.241.90
  clusterIPs:
  - 10.101.241.90
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 7777
    port: 7777
    protocol: TCP
    targetPort: 7777
  selector:
    app: frontend
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
