MyEccom-K8-Files/test-pod-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-test-pod
spec:
  containers:
    - name: test-container
      image: nginx
      envFrom:
      - configMapRef:
          name: env-backend
  restartPolicy: Never
